--- a/roles/minio/templates/minio-docker-compose.yml.j2
+++ b/roles/minio/templates/minio-docker-compose.yml.j2
@@ -7,7 +7,7 @@ services:
     command: server /data --console-address ":9001"
     ports:
       - "9000:9000" # S3 API
-      - "9001:9001" # Web Console
+      # - "9001:9001" # Web Console
     environment:
       MINIO_ROOT_USER: "{{ minio_root_user }}"
       MINIO_ROOT_PASSWORD: "{{ minio_root_password }}"
